add_subdirectory(JM)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(SIBsim4)
endif()
add_subdirectory(aha)
add_subdirectory(d)
add_subdirectory(oggenc)
add_subdirectory(sgefa)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(spiff)
endif()
add_subdirectory(viterbi)

if(NOT DEFINED DISABLE_CXX)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(ALAC)
  endif()
  add_subdirectory(hbd)
  add_subdirectory(lambda-0.1.3)
  add_subdirectory(minisat)
  if(NOT TARGET_OS STREQUAL "SunOS")
    add_subdirectory(hexxagon)
  endif()
endif()
if(NOT DEFINED SMALL_PROBLEM_SIZE)
  add_subdirectory(lua)
endif()
if(TARGET_OS STREQUAL "Linux" AND (NOT ARCH STREQUAL "XCore"))
  add_subdirectory(obsequi)
endif()
if(NOT TARGET_OS STREQUAL "SunOS")
  if(NOT DEFINED DISABLE_CXX)
    add_subdirectory(kimwitu++)
  endif()
endif()
if(NOT TARGET_OS STREQUAL "SunOS")
  add_subdirectory(SPASS)
endif()
if(NOT ARCH STREQUAL "XCore")
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(ClamAV)
  endif()
  add_subdirectory(lemon)
  add_subdirectory(siod)
endif()
if((NOT ARCH STREQUAL "PowerPC") AND (NOT ARCH STREQUAL "XCore"))
  add_subdirectory(sqlite3)
endif()
if(NOT TEST_SUITE_BENCHMARKING_ONLY)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Burg)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(treecc)
  endif()
endif()
