if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(JM)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(SIBsim4)
endif()
add_subdirectory(aha)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(d)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(oggenc)
endif()
add_subdirectory(sgefa)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(spiff)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(viterbi)
endif()
if(NOT DEFINED DISABLE_CXX)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(ALAC)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(hbd)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(lambda-0.1.3)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(minisat)
  endif()
  if(NOT TARGET_OS STREQUAL "SunOS" AND (NOT ARCH STREQUAL "ARC"))
    add_subdirectory(hexxagon)
  endif()
endif()
if(NOT DEFINED SMALL_PROBLEM_SIZE)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(lua)
  endif()
endif()
if(TARGET_OS STREQUAL "Linux" AND (NOT ARCH STREQUAL "XCore"))
  add_subdirectory(obsequi)
endif()
if(NOT TARGET_OS STREQUAL "SunOS")
  if(NOT DEFINED DISABLE_CXX)
    if(NOT ARCH STREQUAL "ARC")
        add_subdirectory(kimwitu++)
    endif()
  endif()
endif()
if(NOT TARGET_OS STREQUAL "SunOS")
  add_subdirectory(SPASS)
endif()
if(NOT ARCH STREQUAL "XCore")
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(ClamAV)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(lemon)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(siod)
  endif()
endif()
if((NOT ARCH STREQUAL "PowerPC") AND (NOT ARCH STREQUAL "XCore"))
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(sqlite3)
  endif()
endif()
if(NOT TEST_SUITE_BENCHMARKING_ONLY)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Burg)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(treecc)
  endif()
endif()
