if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(ASCI_Purple)
endif()
add_subdirectory(ASC_Sequoia)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(BitBench)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Fhourstones)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Fhourstones-3.1)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(FreeBench)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(MallocBench)
endif()
add_subdirectory(McCat)
add_subdirectory(MiBench)
add_subdirectory(NPB-serial)
add_subdirectory(Olden)
add_subdirectory(Prolangs-C)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Ptrdist)
endif()
add_subdirectory(SciMark2-C)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Trimaran)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(VersaBench)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(llubenchmark)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(mediabench)
endif()
add_subdirectory(nbench)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(sim)
endif()
if((NOT "${TARGET_OS}" STREQUAL "Darwin") OR (NOT "${ARCH}" STREQUAL "ARM"))
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(TSVC)
  endif()
endif()
if(NOT DEFINED DISABLE_CXX)
  add_subdirectory(Prolangs-C++)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Bullet)
  endif()
    if(NOT ARCH STREQUAL "ARC")
        add_subdirectory(tramp3d-v4)
    endif()
  if(NOT "${ARCH}" STREQUAL "XCore")
    add_subdirectory(7zip)
    if(NOT ARCH STREQUAL "ARC")
        add_subdirectory(PAQ8p)
    endif()
  endif()
endif()
if(NOT DEFINED SMALL_PROBLEM_SIZE)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(mafft)
  endif()
endif()
