if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Adobe-C++)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(BenchmarkGame)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(CoyoteBench)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Dhrystone)
endif()
add_subdirectory(Linpack)
add_subdirectory(McGill)
add_subdirectory(Misc)
add_subdirectory(Misc-C++)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Misc-C++-EH)
endif()
add_subdirectory(Polybench)
add_subdirectory(Shootout)
add_subdirectory(Shootout-C++)
add_subdirectory(SmallPT)
add_subdirectory(Stanford)
