if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Adobe-C++)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(BenchmarkGame)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(CoyoteBench)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Dhrystone)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Linpack)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(McGill)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Misc)
    add_subdirectory(Misc-C++)
endif()    
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Misc-C++-EH)
endif()
add_subdirectory(Polybench)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(Shootout)
    add_subdirectory(Shootout-C++)
endif()
add_subdirectory(SmallPT)
add_subdirectory(Stanford)
