if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(01-qbsort)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(03-testtrie)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(04-bisect)
endif()
add_subdirectory(05-eks)
add_subdirectory(08-main)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(09-vor)
endif()
add_subdirectory(12-IOtest)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(17-bintr)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(18-imp)
endif()
if(NOT TEST_SUITE_BENCHMARKING_ONLY)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(15-trie)
  endif()
endif()
