add_subdirectory(automotive-basicmath)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(automotive-bitcount)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(automotive-susan)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(consumer-jpeg)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(consumer-typeset)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(network-dijkstra)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(network-patricia)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(security-rijndael)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(security-sha)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(telecomm-CRC32)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(telecomm-FFT)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(telecomm-gsm)
endif()
if(NOT "${ARCH}" STREQUAL "XCore")
    if(NOT ARCH STREQUAL "ARC")
        add_subdirectory(consumer-lame)
    endif()
endif()
if(NOT TEST_SUITE_BENCHMARKING_ONLY)
  add_subdirectory(office-stringsearch)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(security-blowfish)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(telecomm-adpcm)
  endif()
  if((NOT "${ARCH}" STREQUAL "XCore") AND (NOT "${ARCH}" STREQUAL "ARM") AND (NOT ARCH STREQUAL "ARC"))
    add_subdirectory(office-ispell)
  endif()
endif()
