if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(bh)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(bisort)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(em3d)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(health)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(mst)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(perimeter)
endif()
add_subdirectory(power)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(treeadd)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(tsp)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(voronoi)
endif()
