add_subdirectory(city)
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(employ)
endif()
add_subdirectory(life)
add_subdirectory(ocean)
add_subdirectory(primes)
add_subdirectory(simul)
if(NOT TEST_SUITE_BENCHMARKING_ONLY)
  add_subdirectory(NP)
  add_subdirectory(deriv1)
  add_subdirectory(deriv2)
  add_subdirectory(family)
  add_subdirectory(fsm)
  add_subdirectory(garage)
  add_subdirectory(objects)
  add_subdirectory(office)
  add_subdirectory(shapes)
  add_subdirectory(trees)
  add_subdirectory(vcirc)
endif()
