if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(agrep)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(gnugo)
endif()
if((NOT "${ARCH}" STREQUAL "Sparc") AND (NOT "${ARCH}" STREQUAL "Alpha"))
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(bison)
  endif()
endif()
if(NOT TEST_SUITE_BENCHMARKING_ONLY)
  add_subdirectory(TimberWolfMC)
  add_subdirectory(allroots)
  add_subdirectory(assembler)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(cdecl)
  endif()
  add_subdirectory(compiler)
  add_subdirectory(fixoutput)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(football)
  endif()
  add_subdirectory(loader)
  add_subdirectory(plot2fig)
  add_subdirectory(simulator)
  add_subdirectory(unix-tbl)
  if(NOT "${ARCH}" STREQUAL "XCore")
    add_subdirectory(archie-client)
    if(NOT ARCH STREQUAL "ARC")
        add_subdirectory(unix-smail)
    endif()
  endif()
endif()
