if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(agrep)
endif()
if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(gnugo)
endif()
if((NOT "${ARCH}" STREQUAL "Sparc") AND (NOT "${ARCH}" STREQUAL "Alpha"))
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(bison)
  endif()
endif()
if(NOT TEST_SUITE_BENCHMARKING_ONLY)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(TimberWolfMC)
  endif()
  add_subdirectory(allroots)
  add_subdirectory(assembler)
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(cdecl)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(compiler)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(fixoutput)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(football)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(loader)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(plot2fig)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(simulator)
  endif()
  if(NOT ARCH STREQUAL "ARC")
    add_subdirectory(unix-tbl)
  endif()
  if(NOT "${ARCH}" STREQUAL "XCore")
    add_subdirectory(archie-client)
    if(NOT ARCH STREQUAL "ARC")
        add_subdirectory(unix-smail)
    endif()
  endif()
endif()
